--- a/test2.html
+++ b/test2.html
@@ -23,9 +23,9 @@
 </ol>
 </div>
 
-<a href="http://python.cyber.co.kr/pds/books/python2nd/test1.html">링크1</a>
-<a href="./test3.html">링크2</a><br/>
-<img src="http://python.cyber.co.kr/pds/books/python2nd/sample1.png">
+<a href="https://qpzm1010.github.io/hanbom-bigdata.github.io/test1.html">링크1</a>
+<a href="./test2.html">링크2</a><br/>
+<img src="https://qpzm1010.github.io/hanbom-bigdata.github.io/sample1.png">
 <img src="./sample2.png">
 <img src="./sample3.png">
 </body>
