--- a/test2.html
+++ b/test2.html
@@ -19,7 +19,7 @@
 <li>HTML을 해석해 보자</li>
 <li>최신 뉴스 목록을 구해 보자</li>
 <li>링크 목록을 파일로 출력해 보자</li>
-<li>이미지를 한꺼번에 다운로드해 보자</li>
+<li>이미지를 한꺼번에 다운로드해 보자.</li>
 </ol>
 </div>
 
