--- a/test1.html
+++ b/test1.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>파이썬 2학년</title>
+		<title>한봄고등학교 빅데이터정보과 프로젝트실무</title>
 	</head>
 	<body>
 		<h2>제1장 파이썬으로 데이터를 다운로드</h2>
@@ -12,4 +12,5 @@
 			<li>requests로 액세스해 보자</li>
 		</ol>
 	</body>
+
 </html>
