--- a/test2.html
+++ b/test2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>파이썬 2학년</title>
+<title>한봄고등학교 빅데이터정보과 프로젝트실무</title>
 </head>
 <body>
 <div id="chap1">
